--- a/src/pages/lista-tickets/lista-tickets.html
+++ b/src/pages/lista-tickets/lista-tickets.html
@@ -9,12 +9,22 @@
 
 <ion-content padding>
   <ion-list>
-    <ion-item *ngFor="let ticket of tickets">
+    <ion-item *ngFor="let ticket of tickets" (click)="detalleTicket(ticket.id)">
       <ion-badge *ngIf="ticket.prioridad ==1" color="alta">Alta</ion-badge>
       <ion-badge *ngIf="ticket.prioridad ==2" color="media">Media</ion-badge>
       <ion-badge *ngIf="ticket.prioridad ==3" color="baja">Baja</ion-badge>
       {{ticket.nombre}}
     </ion-item>
   </ion-list>
-</ion-content>
+  <ion-fab right bottom>
+      <button ion-fab color="light" (click)="addTicket()">
+      <ion-icon name="add-circle"></ion-icon></button>      
+    </ion-fab>
+  <ion-content>
+   
+  
+    
+  
+
+
 
