--- a/src/pages/editar-ticket/editar-ticket.html
+++ b/src/pages/editar-ticket/editar-ticket.html
@@ -13,11 +13,8 @@
           </ion-select>
       </ion-item>
       <ion-item>
-        <div class="foto_container">
-          <button ion-button full (click)="tomarFoto()">
-            <ion-icon name="camera"></ion-icon>Tomar Foto
-          </button>
-        </div>
+        <div class="foto_container"></div>
+        <img src="{{image}}" *ngIf="image != ''" class="foto_preview">
       </ion-item>    
     </ion-list>
     <ion-grid>
